update lib info

--- a/assets/app.html
+++ b/assets/app.html
@@ -457,6 +457,14 @@ html {
             </div>
           <li class="license-box information-box">
             <div>
+              <span class="product-name">github.com/syndtr/goleveldb</span>
+            </div>
+            <div class="link">
+              <a class="product-link" href="https://github.com/syndtr/goleveldb">github.com/syndtr/goleveldb</a>
+              <a class="license-link" href="https://github.com/syndtr/goleveldb/blob/master/LICENSE">{{ or .BSD2ClauseLicense "BSD 2-clause license" }}</a>
+            </div>
+          <li class="license-box information-box">
+            <div>
               <span class="product-name">golang.org/x/image</span>
             </div>
             <div class="link">
