add more blur options

--- a/assets/app.html
+++ b/assets/app.html
@@ -292,13 +292,17 @@ html {
             <li class="list-item system-setting">
               <div class="system-setting-desc" id="appearance-background-image-blur-label">{{ or .BackgroundImageBlur "Background image blur" }}</div>
               <select class="tool-select value" id="appearance-background-image-blur" aria-labelledby="appearance-background-image-blur-label">
-                <option value="0">0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="4">4</option>
-                <option value="8">8</option>
-                <option value="16">16</option>
-                <option value="32">32</option>
+                <option value="0px">0px</option>
+                <option value="1px">1px</option>
+                <option value="2px">2px</option>
+                <option value="4px">4px</option>
+                <option value="8px">8px</option>
+                <option value="16px">16px</option>
+                <option value="32px">32px</option>
+                <option value="64px">64px</option>
+                <option value="128px">128px</option>
+                <option value="256px">256px</option>
+                <option value="512px">512px</option>
               </select>
             <li class="list-item system-setting">
               <div class="system-setting-desc" id="appearance-circled-image-label">{{ or .CircledImage "Circled image" }}</div>
