--- a/assets/app.html
+++ b/assets/app.html
@@ -368,8 +368,9 @@ html {
         <div class="system-article-sub">
           <ul class="system-settings">
             <li class="list-item system-setting">
-              <button id=library-rescan class="system-setting-value button-simple" type="button">{{ or .RescanSongs "Rescan Songs" }}</button>
-              <button id=library-rescan-images class="system-setting-value button-simple" type="button">{{ or .RescanCoverArt "Rescan Cover art" }}</button>
+              <div class="system-setting-desc">{{ or .Songs "Songs" }}</div><button id=library-rescan class="system-setting-value button-simple" type="button">{{ or .RescanSongs "Rescan" }}</button>
+            <li class="list-item system-setting">
+              <div class="system-setting-desc">{{ or .CoverArt "Cover art" }}</div><button id=library-rescan-images class="system-setting-value button-simple" type="button">{{ or .RescanCoverArt "Rescan" }}</button>
             <li class="list-item system-setting">
               <div class="system-setting-desc">{{ or .LastLibraryUpdate "Last library update:" }}</div><time class="system-setting-value" id=stat-db-update>0</time>
             <li class="list-item system-setting">
