--- a/assets/app.html
+++ b/assets/app.html
@@ -284,13 +284,13 @@ html {
                 <label class="radio-check" for="appearance-theme_prefer-coverart">{{ or .ThemeCoverArt "Prefer CoverArt" }}</label>
               </div>
             <li class="list-item system-setting" id="config-appearance-color-threshold">
-              <div class="system-setting-desc" id="appearance-color-threshold-label">{{ or .CoverArtColorThreshold "CoverArt Color threshold" }}</div>
+              <div class="system-setting-desc" id="appearance-color-threshold-label">{{ or .CoverArtColorThreshold "Threshold" }}</div>
               <input id=appearance-color-threshold type="range" min=0 max=256 step=1 class="config-range" aria-labelledby="appearance-color-threshold-label">
             <li class="list-item system-setting">
               <div class="system-setting-desc" id="appearance-background-image-label">{{ or .BackgroundImage "Background image" }}</div>
               <input type="checkbox" id="appearance-background-image" class="slideswitch" aria-labelledby="appearance-background-image-label">
             <li class="list-item system-setting">
-              <div class="system-setting-desc" id="appearance-background-image-blur-label">{{ or .BackgroundImageBlur "Background image blur" }}</div>
+              <div class="system-setting-desc" id="appearance-background-image-blur-label">{{ or .BackgroundImageBlur "Background blur" }}</div>
               <select class="tool-select value" id="appearance-background-image-blur" aria-labelledby="appearance-background-image-blur-label">
                 <option value="0px">0px</option>
                 <option value="1px">1px</option>
@@ -372,7 +372,7 @@ html {
             <li class="list-item system-setting">
               <div class="system-setting-desc">{{ or .CoverArt "Cover art" }}</div><button id=library-rescan-images class="system-setting-value button-simple" type="button">{{ or .RescanCoverArt "Rescan" }}</button>
             <li class="list-item system-setting">
-              <div class="system-setting-desc">{{ or .LastLibraryUpdate "Last library update:" }}</div><time class="system-setting-value" id=stat-db-update>0</time>
+              <div class="system-setting-desc">{{ or .LastLibraryUpdate "Last update:" }}</div><time class="system-setting-value" id=stat-db-update>0</time>
             <li class="list-item system-setting">
               <div class="system-setting-desc">{{ or .Tracks "Tracks:" }}</div><div class="system-setting-value" id=stat-tracks></div>
             <li class="list-item system-setting">
