--- a/assets/app.html
+++ b/assets/app.html
@@ -424,6 +424,34 @@ html {
             </li>
           </template>
         </div>
+        <h2 class="system-article-sub-header" id="httpstream-header">{{ or .ClientOutput "Client output" }}</h2>
+        <div class="system-article-sub" id="httpstream">
+          <audio id="httpstream-audio">mpd audio stream</audio>
+          <ul class="system-settings">
+            <li class="list-item system-setting">
+              <div class="system-setting-desc-box">
+                <div class="system-setting-desc" id="httpstream-select-label">{{ or .ClientOutputSource "Source" }}</div>
+                <div class="system-setting-desc-help">{{ or .ClientOutputSourceHelp "Play HTTP stream from selected device" }}</div>
+              </div>
+              <select class="tool-select big value" id="httpstream-select" data-disabled-label="{{ or .HTTPStreamDisabled "disabled" }}" aria-labelledby="httpstream-select">
+                <option value="">{{ or .HTTPStreamDisabled "disabled" }}</option>
+              </select>
+            <li class="list-item system-setting" id="httpstream-volume-box">
+              <div class="system-setting-desc" id="httpstream-volume-label">{{ or .HTTPStreamVolume "Volume" }}</div>
+              <input id="httpstream-volume" type="range" min=0 max=1 step=0.001 class="config-range" aria-labelledby="httpstream-volume-label">
+            <li class="list-item system-setting" id="httpstream-max-volume-box">
+              <div class="system-setting-desc" id="httpstream-max-volume-label">{{ or .HTTPStreamMaxVolume "Max volume" }}</div>
+              <select class="tool-select value" id="httpstream-max-volume" aria-labelledby="httpstream-max-volume">
+                <option value="1">100%</option>
+                <option value="0.5">50%</option>
+                <option value="0.25">25%</option>
+                <option value="0.1">10%</option>
+                <option value="0.05">5%</option>
+                <option value="0.01">1%</option>
+              </select>
+          </ul>
+
+        </div>
       </article>
 
       <article id="system-info" class="scrollable system-article">
