--- a/assets/app.html
+++ b/assets/app.html
@@ -120,6 +120,13 @@ html {
     <div id="main-cover" class="main-cover">
       <img id="main-cover-img" class="main-cover-img"></img>
       <img id="main-cover-img2" class="main-cover-img"></img>
+      <div id="main-cover-overlay" class="main-cover-overlay ">
+        <svg class="control-playback-toggleplay-icon reversible-icon" width="200" height="200" viewBox="0 0 200 200">
+          <path class="fill play" d="M 70,60 140,100 70,140 z"/>
+          <path class="fill pause" d="M 75,60 85,60 85,140 75,140 z M 125,60 115,60 115,140 125,140 z"/>
+          <path class="stroke" d="M 25,100 A 75,75 0 1,1 175,100 A 75,75 0 1,1 25,100 z"/>
+        </svg>
+      </div>
       <svg id="main-cover-circle" class="main-cover-circle" width="200" height="200" viewBox="0 0 200 200">
           <path id="main-cover-circle-active" class="stroke" d=""></path>
           <path class="main-cover-circle-inactive stroke" d="M 100,10 L 100,10 A 90,90 0 0,1 100,190 L 100,190 A 90,90 0 0,1 100,10"></path>
@@ -437,10 +444,10 @@ html {
                 <option value="">{{ or .HTTPStreamDisabled "disabled" }}</option>
               </select>
             <li class="list-item system-setting" id="httpstream-volume-box">
-              <div class="system-setting-desc" id="httpstream-volume-label">{{ or .HTTPStreamVolume "Volume" }}</div>
+              <div class="system-setting-desc" id="httpstream-volume-label">{{ or .Volume "Volume" }}</div>
               <input id="httpstream-volume" type="range" min=0 max=1 step=0.001 class="config-range" aria-labelledby="httpstream-volume-label">
             <li class="list-item system-setting" id="httpstream-max-volume-box">
-              <div class="system-setting-desc" id="httpstream-max-volume-label">{{ or .HTTPStreamMaxVolume "Max volume" }}</div>
+              <div class="system-setting-desc" id="httpstream-max-volume-label">{{ or .MaxVolume "Max volume" }}</div>
               <select class="tool-select value" id="httpstream-max-volume" aria-labelledby="httpstream-max-volume">
                 <option value="1">100%</option>
                 <option value="0.5">50%</option>
