--- a/assets/app.html
+++ b/assets/app.html
@@ -118,8 +118,8 @@ html {
   </div>
   <div id="main" class="full main">
     <div id="main-cover" class="main-cover">
-      <img id="main-cover-img" class="main-cover-img"></img>
-      <img id="main-cover-img2" class="main-cover-img"></img>
+      <img alt="now playing cover" id="main-cover-img" class="main-cover-img">
+      <img alt="now playing cover" id="main-cover-img2" class="main-cover-img">
       <div id="main-cover-overlay" class="main-cover-overlay ">
         <svg class="control-playback-toggleplay-icon reversible-icon" width="200" height="200" viewBox="0 0 200 200">
           <path class="fill control-playback-play" d="M 70,60 140,100 70,140 z"/>
@@ -396,7 +396,7 @@ html {
             <li class="list-item system-setting">
               <div class="system-setting-desc">{{ or .CoverArt "Cover art" }}</div><button id=library-rescan-images class="system-setting-value button-simple" type="button">{{ or .RescanCoverArt "Rescan" }}</button>
             <li class="list-item system-setting">
-              <div class="system-setting-desc">{{ or .LastLibraryUpdate "Last update:" }}</div><time class="system-setting-value" id=stat-db-update>0</time>
+              <div class="system-setting-desc">{{ or .LastLibraryUpdate "Last update:" }}</div><div class="system-setting-value" id="stat-db-update">0</div>
             <li class="list-item system-setting">
               <div class="system-setting-desc">{{ or .Tracks "Tracks:" }}</div><div class="system-setting-value" id=stat-tracks></div>
             <li class="list-item system-setting">
@@ -412,7 +412,7 @@ html {
       <article id="system-outputs" class="scrollable system-article">
         <h2 class="system-article-sub-header">{{ or .Options "Options" }}</h2>
         <div class="system-article-sub">
-          <ul class="system-settings"></ul>
+          <ul class="system-settings">
             <li class="list-item system-setting">
               <div class="system-setting-desc" id="outputs-options-replay-gain-label">{{ or .ReplayGain "Replay gain" }}</div>
               <select class="tool-select value" id="outputs-options-replay-gain" aria-labelledby="outputs-options-replay-gain-label">
