--- a/assets/app.html
+++ b/assets/app.html
@@ -445,6 +445,13 @@ html {
                   </div>
                   <input class="slideswitch device-dop-switch" type="checkbox">
                 </li>
+                <li class="system-setting child-list-item device-allowed-formats">
+                  <div class="system-setting-desc-box">
+                    <div class="system-setting-desc-sub system-setting-desc-boxed">{{ or .DeviceAllowedFormats "Allowed formats" }}</div>
+                    <div class="system-setting-desc-help">{{ or .DeviceAllowedFormatsHelp "Specifies a list of allowed audio formats." }}</div>
+                  </div>
+                  <button class="system-setting-value button-simple device-allowed-formats-button" type="button">{{ or .Configure "Configure" }}</button>
+                </li>
               </ul>
             </li>
           </template>
@@ -576,6 +583,65 @@ html {
     </div>
   </div>
 </div>
+
+<div id="submodal-outer" class="submodal-outer hide">
+  <div id="submodal-allowed-formats" class="submodal-window submodal-allowed-formats hide">
+    <button id="submodal-help-close" class=submodal-window-close type="button" value="" title="{{ or .titleClose "Close" }}" aria-label="{{ or .ariaLabelCloseThisWindow "Close this window" }}">
+      <svg class="modal-window-close-icon" width="30" height="30" viewBox="0 0 200 200">
+        <path class="close-button stroke" d="M 40,40 160,160 M 160,40 40,160"/>
+      </svg>
+    </button>
+    <h1 class="modal-window-header">{{ or .AllowedFormats "Allowed formats" }}</h1>
+    <div class="radio-box">
+      <input type="radio" id="allowed-formats-auto" name="allowed-formats" value="auto"/>
+      <label class="radio-check" for="allowed-formats-auto">{{ or .AllowedFormatsAuto "Auto" }}</label>
+      <input type="radio" id="allowed-formats-custom" name="allowed-formats" value="custom"/>
+      <label class="radio-check" for="allowed-formats-custom">{{ or .AllowedFormatsCustom "Custom" }}</label>
+    </div>
+    <div class="scrollable submodal-scrollable scrollable-centering">
+      <h2 class="modal-window-header-sub">{{ or .DSD "DSD" }}</h2>
+      <table class="allowed-formats-dsd">
+        <tr>
+          <td></td><th>{{ or .Native "Native" }}</th><th>{{ or .DoP "DoP" }}</th>
+        </tr>
+        <tr>
+          <th>DSD64</th><td><input type="checkbox" name="dsd64:*" class="slideswitch"></td><td><input type="checkbox" name="dsd64:*=dop" class="slideswitch"></td>
+        </tr>
+        <tr>
+          <th>DSD128</th><td><input type="checkbox" name="dsd128:*" class="slideswitch"></td><td><input type="checkbox" name="dsd128:*=dop" class="slideswitch"></td>
+        </tr>
+        <tr>
+          <th>DSD256</th><td><input type="checkbox" name="dsd256:*" class="slideswitch"></td><td><input type="checkbox" name="dsd256:*=dop" class="slideswitch"></td>
+        </tr>
+      </table>
+      <h2 class="modal-window-header-sub">{{ or .PCM "PCM" }}</h2>
+      <table class="allowed-formats-pcm">
+        <tr>
+          <td></td><th>16bit</th><th>24bit</th><th>32bit</th>
+        </tr>
+        <tr>
+          <th>44.1khz</th><td><input type="checkbox" name="44100:16:*" class="slideswitch"></td><td><input type="checkbox" name="44100:24:*" class="slideswitch"></td><td><input type="checkbox" name="44100:32:*" class="slideswitch"></td>
+        </tr>
+        <tr>
+          <th>48khz</th><td><input type="checkbox" name="48000:16:*" class="slideswitch"></td><td><input type="checkbox" name="48000:24:*" class="slideswitch"></td><td><input type="checkbox" name="48000:32:*" class="slideswitch"></td>
+        </tr>
+        <tr>
+          <th>88.2khz</th><td><input type="checkbox" name="88200:16:*" class="slideswitch"></td><td><input type="checkbox" name="88200:24:*" class="slideswitch"></td><td><input type="checkbox" name="88200:32:*" class="slideswitch"></td>
+        </tr>
+        <tr>
+          <th>96khz</th><td><input type="checkbox" name="96000:16:*" class="slideswitch"></td><td><input type="checkbox" name="96000:24:*" class="slideswitch"></td><td><input type="checkbox" name="96000:32:*" class="slideswitch"></td>
+        </tr>
+        <tr>
+          <th>192khz</th><td><input type="checkbox" name="192000:16:*" class="slideswitch"></td><td><input type="checkbox" name="192000:24:*" class="slideswitch"></td><td><input type="checkbox" name="192000:32:*" class="slideswitch"></td>
+        </tr>
+        <tr>
+          <th>384khz</th><td><input type="checkbox" name="384000:16:*" class="slideswitch"></td><td><input type="checkbox" name="384000:24:*" class="slideswitch"></td><td><input type="checkbox" name="384000:32:*" class="slideswitch"></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
+
 <footer>
   <nav id="control-playback" class="control-playback">
     <button class="control-button control-playback-sub prev" id="control-prev" type="button" value="prev" title="{{ or .titlePrevious "Previous" }}" aria-label="{{ or .ariaLabelGoToPreviousSong "Go to previous song" }}">
